--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,30 @@
     <div id="root"></div>
     <h1>Statistics Sandbox</h1>
     <h2>Random Distributions</h2>
-    <div>
-        <canvas id="canvas" width="400" height="500"></canvas>
+    <div id="canvas_holder">
+        <canvas id="canvas" width="320" height="400"></canvas>
     </div>
-    <div>
+    <!--<div>
         <button id="plot">refresh</button>
-    </div>
+    </div>-->
+    <h3>Change Number Points</h3>
+    <form id="sizer">
+        <div id="output_holder">
+            <output name="result">50</output>
+        </div>
+        <div id="input_holder">
+            <div>
+                <input type="range" name="numberN" max="101" min="5" step="5" value="50" />
+            </div>
+            <div>
+                <label class="begin">0</label>
+                <label class="end">100</label>
+            </div>
+        </div>
+    </form>
     <div class="footer">
         <a href="mailto:grymyk@gmail.com">grymyk@gmail.com</a><span>© 2019</span>
     </div>
     <!--<script src="index.bundle.js"></script>-->
 </body>
-
 </html>
