--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             <output name="result">50</output>
         </div>
         <div id="input_holder">
-            <div>
+            <div id="input_range_holder">
                 <input type="range" name="numberN" max="101" min="5" step="5" value="50" />
             </div>
             <div>
