--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,15 @@
         </div>
         <div id="input_holder">
             <div id="input_range_holder">
-                <input type="range" name="numberN" max="101" min="5" step="5" value="50" />
+                <input id="input_range"
+                       type="range"
+                       name="numberN"
+                       max="101"
+                       min="5"
+                       step="5"
+                       value="50"
+                />
+                <label for="input_range">INPUT RANGE:</label>
             </div>
             <div>
                 <label class="begin">0</label>
@@ -35,7 +43,7 @@
         </div>
     </form>
     <div class="footer">
-        <a href="mailto:grymyk@gmail.com">grymyk@gmail.com</a><span>© 2019</span>
+        <a href="mailto:myko@grymyk.com">myko@grymyk.com</a><span>©2020</span>
     </div>
     <!--<script src="index.bundle.js"></script>-->
 </body>
